--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Home - Brand</title>
+    <title>Sanrax Global- Contact</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Kaushan+Script">
@@ -40,13 +40,14 @@
             </div>
         </div>
     </nav>
-    <section class="getintouch" style="margin-top: -155px;background: linear-gradient(rgb(194,176,159) 3%, white 33%, rgb(255,255,255) 71%, rgb(194,176,159) 100%)">
-        <div class="container modern-form">
-            <div class="text-center">
-                <h4 style="color: #212529;font-size: 45px;">Get in touch</h4>
+    <section id="portfolio" class="bg-light" style="margin-bottom: -76px;margin-top: -32px;background: linear-gradient(rgb(194,176,159) 3%, white 33%, rgb(255,255,255) 71%, rgb(194,176,159) 100%);">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="text-uppercase section-heading">Contact Us</h2>
+                    <h3 class="section-subheading text-muted">Get in touch with our team!</h3>
+                </div>
             </div>
-            <hr class="modern-form__hr">
-            <div class="modern-form__form-container">
                 <form>
                     <div class="form-row">
                         <div class="col col-contact">
@@ -85,30 +86,12 @@
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-3 item social"><img class="img-fluid footer-logo" style="height: 152px;width: 150px;" src="assets/img/Screenshot%202020-11-29%20211103.png"></div>
-                    <div class="col-sm-4 col-md-3 item-srv">
-                        <h3>Control menu</h3>
-                        <ul>
-                            <li><a href="https://ultimatecomputers.ro/shop/index.php?route=product/manufacturer">Producători</a></li>
-                            <li><a href="https://ultimatecomputers.ro/shop/index.php?route=account/voucher">Vouchere cadou</a></li>
-                            <li><a href="https://ultimatecomputers.ro/shop/index.php?route=affiliate/login">Afiliați</a></li>
-                            <li><a href="https://ultimatecomputers.ro/shop/index.php?route=product/special">Oferte speciale</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-sm-4 col-md-3 item-srv">
-                        <h3>INFORMATION</h3>
-                        <ul>
-                            <li><a href="contact.html">Contact</a></li>
-                            <li><a href="https://ultimatecomputers.ro/shop/index.php?route=information/information&amp;information_id=6" style="background: rgba(255,0,0,0);">Address</a></li>
-                            <li><a href="https://ultimatecomputers.ro/shop/index.php?route=information/information&amp;information_id=3" style="background: rgba(255,0,0,0);">Privacy Policiy</a></li>
-                            <li><a href="https://ultimatecomputers.ro/shop/index.php?route=information/information&amp;information_id=5" style="background: rgba(255,0,0,0);">Terms And Conditions</a></li>
-                        </ul>
-                    </div>
                     <div class="col-sm-4 col-md-3 item">
                         <h3>Reach Us</h3>
                         <ul>
-                            <li class="despre-noi"><i class="fa fa-home despre-noi"></i>&nbsp; Address</li>
-                            <li class="despre-noi"><i class="fa fa-envelope despre-noi"></i>&nbsp;Email:</li>
-                            <li class="despre-noi"><i class="fa fa-phone despre-noi"></i>&nbsp;Telephone:</li>
+                            <li class="despre-noi"><i class="fa fa-home despre-noi"></i>Address: </li>
+                            <li class="despre-noi"><i class="fa fa-envelope despre-noi"></i>Email: </li>
+                            <li class="despre-noi"><i class="fa fa-phone despre-noi"></i>Telephone: </li>
                         </ul>
                         <ul></ul>
                     </div>
