--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Home - Brand</title>
+    <title>Sanrax Global Pte.Ltd.</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Kaushan+Script">
@@ -39,7 +39,7 @@
         </div>
     </nav>
     <marquee  style="font-family: Poppins, sans-serif;color: #ffffff;background: linear-gradient(rgb(0,160,137), rgb(2,113,89))" >  
-        Marquee Installed. You will get scrolling text like this - Harsh  
+        Sanrax Global Pte. Ltd.  
         </marquee> 
     <header class="masthead" style="background: url(&quot;assets/img/Presentation1.jpg&quot;) center / contain space;margin-top: -9px;margin-bottom: -246px;margin-right: -24px;padding: 99px;">
         <div class="container">
@@ -52,7 +52,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="text-uppercase section-heading">Our Products</h2>
-                    <h3 class="section-subheading text-muted">These are some of our wide categories of products offered by us.</h3>
+                    <h3 class="section-subheading text-muted">These are some of our wide range of products offered by us.</h3>
                 </div>
             </div>
             <div class="row">
@@ -112,65 +112,9 @@
                             <div class="portfolio-hover-content"><i class="fa fa-cart-plus fa-3x"></i></div>
                         </div><img class="img-fluid" src="assets/img/portfolio/6-thumbnail.jpg"></a>
                     <div class="portfolio-caption">
-                        <h4>And Many More....</h4>
+                        <h4>And lot more..</h4>
                         <p class="text-muted"></p>
                     </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section style="background: linear-gradient(rgb(224, 207, 190) 100%, white 33%, rgb(255,255,255) 71%, rgb(224, 207, 190) 100%);">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="text-uppercase">&nbsp;About Us&nbsp;</h2>
-                    <h3 class="text-muted section-subheading"></h3>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="row clearmargin clearpadding row-image-txt" style="background: rgb(2,127,98);">
-                        <div class="col-xs-12 col-sm-6 col-md-6 clearmargin clearpadding col-sm-push-6" style="height: 347px;background: url(&quot;assets/img/Screenshot%202020-11-29%20211103.png&quot;) center / cover;margin-top: 4px;max-width: -165px;margin-right: 0px;margin-left: 6px;margin-bottom: 6px;">
-                            <div></div>
-                        </div>
-                        <div class="col-xs-12 col-sm-6 col-md-6 col-sm-pull-6" style="padding: 20px;background: #027f62;margin-left: 6px;margin-right: -14px;">
-                            <h1 style="margin-right: 0px;margin-left: 36px;">Sanrax Global Pte. Ltd.</h1>
-                            <hr>
-                            <p style="margin-bottom: 10px;margin-left: 34px;"><br>We are a leading Global Exporters company of Palm Oil Products for the past decade. We are proud to have great number of satisfied customers who desire our products in mainly the following categories: Oleochemicals, Glycerine,
-                                Soap Noodles, Perfumes, PFAD, Palm Stearin, Palm Acid Oil.<br><br></p>
-                            <div style="text-align:center"><button class="btn btn-light btn-lg" type="button">Learn More</button></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section id="contact" style="background: linear-gradient(rgb(2,127,98), rgb(252,252,252) 28%, rgb(88,189,164)), rgb(0,161,133);">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="text-uppercase section-heading" style="color: rgb(1,1,1);font-family: Courgette, cursive;">Contact Us</h2>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-12">
-                    <form id="contactForm" name="contactForm" novalidate="novalidate">
-                        <div class="form-row">
-                            <div class="col col-md-6">
-                                <div class="form-group"><input class="form-control" type="text" id="name" placeholder="Your Name *" required="" style="font-family: Courgette, cursive;"><small class="form-text text-danger flex-grow-1 help-block lead"></small></div>
-                                <div class="form-group"><input class="form-control" type="email" id="email" placeholder="Your Email *" required=""><small class="form-text text-danger help-block lead"></small></div>
-                                <div class="form-group"><input class="form-control" type="tel" placeholder="Your Phone *" required=""><small class="form-text text-danger help-block lead"></small></div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="form-group"><textarea class="form-control" id="message" placeholder="Your Message *" required=""></textarea><small class="form-text text-danger help-block lead"></small></div>
-                            </div>
-                            <div class="col">
-                                <div class="clearfix"></div>
-                            </div>
-                            <div class="col-lg-12 text-center">
-                                <div id="success"></div><button class="btn btn-primary btn-xl text-uppercase" id="sendMessageButton" type="submit">Send Message</button></div>
-                        </div>
-                    </form>
                 </div>
             </div>
         </div>
@@ -180,180 +124,18 @@
             <div class="container">
                 <div class="row justify-content-center" >
                     <div class="col-lg-3 item social"><img class="img-fluid footer-logo" style="height: 152px;width: 150px;" src="assets/img/Screenshot%202020-11-29%20211103.png"></div>
-                    <div class="col-sm-4 col-md-3 item-srv">
-                        <h3>Control menu</h3>
-                        <ul>
-                            <li><a href="https://ultimatecomputers.ro/shop/index.php?route=product/manufacturer">Producători</a></li>
-                            <li><a href="https://ultimatecomputers.ro/shop/index.php?route=account/voucher">Vouchere cadou</a></li>
-                            <li><a href="https://ultimatecomputers.ro/shop/index.php?route=affiliate/login">Afiliați</a></li>
-                            <li><a href="https://ultimatecomputers.ro/shop/index.php?route=product/special">Oferte speciale</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-sm-4 col-md-3 item-srv">
-                        <h3>INFORMATION</h3>
-                        <ul>
-                            <li><a href="contact.html">Contact</a></li>
-                            <li><a href="https://ultimatecomputers.ro/shop/index.php?route=information/information&amp;information_id=6" style="background: rgba(255,0,0,0);">Address</a></li>
-                            <li><a href="https://ultimatecomputers.ro/shop/index.php?route=information/information&amp;information_id=3" style="background: rgba(255,0,0,0);">Privacy Policiy</a></li>
-                            <li><a href="https://ultimatecomputers.ro/shop/index.php?route=information/information&amp;information_id=5" style="background: rgba(255,0,0,0);">Terms And Conditions</a></li>
-                        </ul>
-                    </div>
                     <div class="col-sm-4 col-md-3 item">
                         <h3>Reach Us</h3>
                         <ul>
-                            <li class="despre-noi"><i class="fa fa-home despre-noi"></i>&nbsp; Address</li>
-                            <li class="despre-noi"><i class="fa fa-envelope despre-noi"></i>&nbsp;Email:</li>
-                            <li class="despre-noi"><i class="fa fa-phone despre-noi"></i>&nbsp;Telephone:</li>
+                            <li class="despre-noi"><i class="fa fa-home despre-noi"></i>Address: </li>
+                            <li class="despre-noi"><i class="fa fa-envelope despre-noi"></i>Email: </li>
+                            <li class="despre-noi"><i class="fa fa-phone despre-noi"></i>Telephone: </li>
                         </ul>
                         <ul></ul>
                     </div>
                 </div>
             </div>
         </footer>
-    </div>
-    <div class="modal fade portfolio-modal text-center" role="dialog" tabindex="-1" id="portfolioModal1">
-        <div class="modal-dialog modal-lg" role="document">
-            <div class="modal-content">
-                <div class="modal-body">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-lg-8 mx-auto">
-                                <div class="modal-body">
-                                    <h2 class="text-uppercase">Project Name</h2>
-                                    <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p><img class="img-fluid d-block mx-auto" src="assets/img/portfolio/1-full.jpg">
-                                    <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae
-                                        cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
-                                    <ul class="list-unstyled">
-                                        <li>Date: January 2017</li>
-                                        <li>Client: Threads</li>
-                                        <li>Category: Illustration</li>
-                                    </ul><button class="btn btn-primary" data-dismiss="modal" type="button"><i class="fa fa-times"></i><span>&nbsp;Close Project</span></button></div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="modal fade portfolio-modal text-center" role="dialog" tabindex="-1" id="portfolioModal2">
-        <div class="modal-dialog modal-lg" role="document">
-            <div class="modal-content">
-                <div class="modal-body">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-lg-8 mx-auto">
-                                <div class="modal-body">
-                                    <h2 class="text-uppercase">Project Name</h2>
-                                    <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p><img class="img-fluid d-block mx-auto" src="assets/img/portfolio/2-full.jpg">
-                                    <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae
-                                        cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
-                                    <ul class="list-unstyled">
-                                        <li>Date: January 2017</li>
-                                        <li>Client: Threads</li>
-                                        <li>Category: Illustration</li>
-                                    </ul><button class="btn btn-primary" data-dismiss="modal" type="button"><i class="fa fa-times"></i><span>&nbsp;Close Project</span></button></div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="modal fade portfolio-modal text-center" role="dialog" tabindex="-1" id="portfolioModal3">
-        <div class="modal-dialog modal-lg" role="document">
-            <div class="modal-content">
-                <div class="modal-body">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-lg-8 mx-auto">
-                                <div class="modal-body">
-                                    <h2 class="text-uppercase">Project Name</h2>
-                                    <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p><img class="img-fluid d-block mx-auto" src="assets/img/portfolio/3-full.jpg">
-                                    <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae
-                                        cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
-                                    <ul class="list-unstyled">
-                                        <li>Date: January 2017</li>
-                                        <li>Client: Threads</li>
-                                        <li>Category: Illustration</li>
-                                    </ul><button class="btn btn-primary" data-dismiss="modal" type="button"><i class="fa fa-times"></i><span>&nbsp;Close Project</span></button></div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="modal fade portfolio-modal text-center" role="dialog" tabindex="-1" id="portfolioModal4">
-        <div class="modal-dialog modal-lg" role="document">
-            <div class="modal-content">
-                <div class="modal-body">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-lg-8 mx-auto">
-                                <div class="modal-body">
-                                    <h2 class="text-uppercase">Project Name</h2>
-                                    <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p><img class="img-fluid d-block mx-auto" src="assets/img/portfolio/4-full.jpg">
-                                    <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae
-                                        cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
-                                    <ul class="list-unstyled">
-                                        <li>Date: January 2017</li>
-                                        <li>Client: Threads</li>
-                                        <li>Category: Illustration</li>
-                                    </ul><button class="btn btn-primary" data-dismiss="modal" type="button"><i class="fa fa-times"></i><span>&nbsp;Close Project</span></button></div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="modal fade portfolio-modal text-center" role="dialog" tabindex="-1" id="portfolioModal5">
-        <div class="modal-dialog modal-lg" role="document">
-            <div class="modal-content">
-                <div class="modal-body">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-lg-8 mx-auto">
-                                <div class="modal-body">
-                                    <h2 class="text-uppercase">Project Name</h2>
-                                    <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p><img class="img-fluid d-block mx-auto" src="assets/img/portfolio/5-full.jpg">
-                                    <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae
-                                        cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
-                                    <ul class="list-unstyled">
-                                        <li>Date: January 2017</li>
-                                        <li>Client: Threads</li>
-                                        <li>Category: Illustration</li>
-                                    </ul><button class="btn btn-primary" data-dismiss="modal" type="button"><i class="fa fa-times"></i><span>&nbsp;Close Project</span></button></div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="modal fade portfolio-modal text-center" role="dialog" tabindex="-1" id="portfolioModal6">
-        <div class="modal-dialog modal-lg" role="document">
-            <div class="modal-content">
-                <div class="modal-body">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-lg-8 mx-auto">
-                                <div class="modal-body">
-                                    <h2 class="text-uppercase">Project Name</h2>
-                                    <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p><img class="img-fluid d-block mx-auto" src="assets/img/portfolio/6-full.jpg">
-                                    <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae
-                                        cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
-                                    <ul class="list-unstyled">
-                                        <li>Date: January 2017</li>
-                                        <li>Client: Threads</li>
-                                        <li>Category: Illustration</li>
-                                    </ul><button class="btn btn-primary" data-dismiss="modal" type="button"><i class="fa fa-times"></i><span>&nbsp;Close Project</span></button></div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
     </div>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
