--- a/products.html
+++ b/products.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Home - Brand</title>
+    <title>Sanrax Global- Products</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Kaushan+Script">
@@ -43,7 +43,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="text-uppercase section-heading">Our Products</h2>
-                    <h3 class="section-subheading text-muted">These are some of our wide categories of products offered by us.</h3>
+                    <h3 class="section-subheading text-muted">These are some of our wide range of products offered by us.</h3>
                 </div>
             </div>
             <div class="row">
@@ -51,7 +51,7 @@
                     <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
                         <div class="portfolio-hover" style="color: rgb(14,143,122);background: rgba(14,143,122,0.77);">
                             <div class="portfolio-hover-content"><i class="fa fa-cart-plus fa-3x"></i></div>
-                        </div><img class="img-fluid" src="assets/img/portfolio/1-thumbnail.jpg"></a>
+                        </div><img class="img-fluid" src="assets/img/download (2).jpeg"></a>
                     <div class="portfolio-caption">
                         <h4>Soap Noodles</h4>
                         <p class="text-muted">Cosmetics</p>
@@ -61,7 +61,7 @@
                     <a class="portfolio-link" data-toggle="modal" href="#portfolioModal2">
                         <div class="portfolio-hover" style="background: rgba(14,143,122,0.77);">
                             <div class="portfolio-hover-content"><i class="fa fa-cart-plus fa-3x"></i></div>
-                        </div><img class="img-fluid" src="assets/img/portfolio/2-thumbnail.jpg"></a>
+                        </div><img class="img-fluid" src="assets/img/download (3).jpeg"></a>
                     <div class="portfolio-caption">
                         <h4>Perfumes</h4>
                         <p class="text-muted">Body Fragrances</p>
@@ -71,7 +71,7 @@
                     <a class="portfolio-link" data-toggle="modal" href="#portfolioModal3">
                         <div class="portfolio-hover" style="background: rgba(14,143,122,0.77);">
                             <div class="portfolio-hover-content"><i class="fa fa-cart-plus fa-3x"></i></div>
-                        </div><img class="img-fluid" src="assets/img/portfolio/3-thumbnail.jpg"></a>
+                        </div><img class="img-fluid" src="assets/img/download (4).jpeg"></a>
                     <div class="portfolio-caption">
                         <h4>Fatty Acids</h4>
                         <p class="text-muted">Dietary Supplements&nbsp;</p>
@@ -81,7 +81,7 @@
                     <a class="portfolio-link" data-toggle="modal" href="#portfolioModal5">
                         <div class="portfolio-hover" style="background: rgba(14,143,122,0.77);">
                             <div class="portfolio-hover-content"><i class="fa fa-cart-plus fa-3x"></i></div>
-                        </div><img class="img-fluid img-fluid" src="assets/img/portfolio/5-thumbnail.jpg"></a>
+                        </div><img class="img-fluid img-fluid" src="assets/img/images.jpeg"></a>
                     <div class="portfolio-caption">
                         <h4>Alcohols &amp; Esters</h4>
                         <p class="text-muted">Chemicals</p>
@@ -91,7 +91,7 @@
                     <a class="portfolio-link" data-toggle="modal" href="#portfolioModal5">
                         <div class="portfolio-hover" style="background: rgba(14,143,122,0.77);">
                             <div class="portfolio-hover-content"><i class="fa fa-cart-plus fa-3x"></i></div>
-                        </div><img class="img-fluid img-fluid" src="assets/img/portfolio/5-thumbnail.jpg"></a>
+                        </div><img class="img-fluid img-fluid" src="assets/img/download (5).jpeg"></a>
                     <div class="portfolio-caption">
                         <h4>Cooking/ Vegetable Oil</h4>
                         <p class="text-muted">Food Grade Products</p>
@@ -103,43 +103,24 @@
                             <div class="portfolio-hover-content"><i class="fa fa-cart-plus fa-3x"></i></div>
                         </div><img class="img-fluid" src="assets/img/portfolio/6-thumbnail.jpg"></a>
                     <div class="portfolio-caption">
-                        <h4>And Many More....</h4>
+                        <h4>And lot more..</h4>
                         <p class="text-muted"></p>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    
     <div class="footer-clean" style="background: linear-gradient(rgba(194, 176, 159, 0.836) 3%, white 33%, rgb(255,255,255) 71%, rgb(194,176,159) 100%);">
         <footer>
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-3 item social"><img class="img-fluid footer-logo" style="height: 152px;width: 150px;" src="assets/img/Screenshot%202020-11-29%20211103.png"></div>
-                    <div class="col-sm-4 col-md-3 item-srv">
-                        <h3>Control menu</h3>
-                        <ul>
-                            <li><a href="https://ultimatecomputers.ro/shop/index.php?route=product/manufacturer">Producători</a></li>
-                            <li><a href="https://ultimatecomputers.ro/shop/index.php?route=account/voucher">Vouchere cadou</a></li>
-                            <li><a href="https://ultimatecomputers.ro/shop/index.php?route=affiliate/login">Afiliați</a></li>
-                            <li><a href="https://ultimatecomputers.ro/shop/index.php?route=product/special">Oferte speciale</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-sm-4 col-md-3 item-srv">
-                        <h3>INFORMATION</h3>
-                        <ul>
-                            <li><a href="contact.html">Contact</a></li>
-                            <li><a href="https://ultimatecomputers.ro/shop/index.php?route=information/information&amp;information_id=6" style="background: rgba(255,0,0,0);">Address</a></li>
-                            <li><a href="https://ultimatecomputers.ro/shop/index.php?route=information/information&amp;information_id=3" style="background: rgba(255,0,0,0);">Privacy Policiy</a></li>
-                            <li><a href="https://ultimatecomputers.ro/shop/index.php?route=information/information&amp;information_id=5" style="background: rgba(255,0,0,0);">Terms And Conditions</a></li>
-                        </ul>
-                    </div>
                     <div class="col-sm-4 col-md-3 item">
                         <h3>Reach Us</h3>
                         <ul>
-                            <li class="despre-noi"><i class="fa fa-home despre-noi"></i>&nbsp; Address</li>
-                            <li class="despre-noi"><i class="fa fa-envelope despre-noi"></i>&nbsp;Email:</li>
-                            <li class="despre-noi"><i class="fa fa-phone despre-noi"></i>&nbsp;Telephone:</li>
+                            <li class="despre-noi"><i class="fa fa-home despre-noi"></i>Address: </li>
+                            <li class="despre-noi"><i class="fa fa-envelope despre-noi"></i>Email: </li>
+                            <li class="despre-noi"><i class="fa fa-phone despre-noi"></i>Telephone: </li>
                         </ul>
                         <ul></ul>
                     </div>
