--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Home - Brand</title>
+    <title>Sanrax Global- About</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Kaushan+Script">
@@ -38,12 +38,12 @@
             </div>
         </div>
     </nav>
-    <section id="about"style="background: linear-gradient(rgb(194,176,159) 3%, white 33%, rgb(255,255,255) 71%, rgb(194,176,159) 100%);">
+    <section id="portfolio" class="bg-light" style="margin-bottom: -76px;margin-top: -32px;background: linear-gradient(rgb(194,176,159) 3%, white 33%, rgb(255,255,255) 71%, rgb(194,176,159) 100%);">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="text-uppercase">&nbsp;About Us&nbsp;</h2>
-                    <h3 class="text-muted section-subheading"></h3>
+                    <h2 class="text-uppercase section-heading">About Us</h2>
+                    <h3 class="section-subheading text-muted">We want you to know us well before we serve you!</h3>
                 </div>
             </div>
             <div class="row">
@@ -70,30 +70,12 @@
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-3 item social"><img class="img-fluid footer-logo" style="height: 152px;width: 150px;" src="assets/img/Screenshot%202020-11-29%20211103.png"></div>
-                    <div class="col-sm-4 col-md-3 item-srv">
-                        <h3>Control menu</h3>
-                        <ul>
-                            <li><a href="https://ultimatecomputers.ro/shop/index.php?route=product/manufacturer">Producători</a></li>
-                            <li><a href="https://ultimatecomputers.ro/shop/index.php?route=account/voucher">Vouchere cadou</a></li>
-                            <li><a href="https://ultimatecomputers.ro/shop/index.php?route=affiliate/login">Afiliați</a></li>
-                            <li><a href="https://ultimatecomputers.ro/shop/index.php?route=product/special">Oferte speciale</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-sm-4 col-md-3 item-srv">
-                        <h3>INFORMATION</h3>
-                        <ul>
-                            <li><a href="contact.html">Contact</a></li>
-                            <li><a href="https://ultimatecomputers.ro/shop/index.php?route=information/information&amp;information_id=6" style="background: rgba(255,0,0,0);">Address</a></li>
-                            <li><a href="https://ultimatecomputers.ro/shop/index.php?route=information/information&amp;information_id=3" style="background: rgba(255,0,0,0);">Privacy Policiy</a></li>
-                            <li><a href="https://ultimatecomputers.ro/shop/index.php?route=information/information&amp;information_id=5" style="background: rgba(255,0,0,0);">Terms And Conditions</a></li>
-                        </ul>
-                    </div>
                     <div class="col-sm-4 col-md-3 item">
                         <h3>Reach Us</h3>
                         <ul>
-                            <li class="despre-noi"><i class="fa fa-home despre-noi"></i>&nbsp; Address</li>
-                            <li class="despre-noi"><i class="fa fa-envelope despre-noi"></i>&nbsp;Email:</li>
-                            <li class="despre-noi"><i class="fa fa-phone despre-noi"></i>&nbsp;Telephone:</li>
+                            <li class="despre-noi"><i class="fa fa-home despre-noi"></i>Address: </li>
+                            <li class="despre-noi"><i class="fa fa-envelope despre-noi"></i>Email: </li>
+                            <li class="despre-noi"><i class="fa fa-phone despre-noi"></i>Telephone: </li>
                         </ul>
                         <ul></ul>
                     </div>
