--- a/location.html
+++ b/location.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Home - Brand</title>
+    <title>Sanrax Global- Location</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Kaushan+Script">
@@ -41,11 +41,13 @@
     </nav>
     <section style="margin-top: -159px;background: linear-gradient(rgb(194,176,159) 3%, rgb(194,176,159) 100%);">
         <div class="bg-white" style="padding-top: 60px;padding-bottom: 30px;background: linear-gradient(rgb(194,176,159) 3%, white 33%, rgb(255,255,255) 71%, rgb(194,176,159) 100%);">
-            <div class="container" style="padding-bottom: 10px;">
-                <div class="text-center">
-                    <h4 style="color: #23295f;font-size: 45px;margin-top: 15px;font-family: Poppins, sans-serif;"><strong>Our Location</strong></h4>
-                    <hr style="border-color: rgb(0,0,0);width: 121px;">
+            <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="text-uppercase section-heading">About Us</h2>
+                    <h3 class="section-subheading text-muted">We want you to know us well before we serve you!</h3>
                 </div>
+            </div>
                 <div class="row" style="margin-top: 44px;">
                     <div class="col-md-12 col-lg-6" style="height: 483px;"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3538.918990305218!2d-109.93999038546625!3d27.502894741055034!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x86c81586bf6750cd%3A0x7b3676ba708e69e4!2sDENTRILAB%20Radiolog%C3%ADa%20y%20Laboratorio%20Dental!5e0!3m2!1sen!2smx!4v1606384575901!5m2!1sen!2smx" width="100%" height="400px" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div>
                     <div class="col-md-6 col-lg-3" style="margin-left: 214px;">
@@ -64,30 +66,12 @@
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-3 item social"><img class="img-fluid footer-logo" style="height: 152px;width: 150px;" src="assets/img/Screenshot%202020-11-29%20211103.png"></div>
-                    <div class="col-sm-4 col-md-3 item-srv">
-                        <h3>Control menu</h3>
-                        <ul>
-                            <li><a href="https://ultimatecomputers.ro/shop/index.php?route=product/manufacturer">Producători</a></li>
-                            <li><a href="https://ultimatecomputers.ro/shop/index.php?route=account/voucher">Vouchere cadou</a></li>
-                            <li><a href="https://ultimatecomputers.ro/shop/index.php?route=affiliate/login">Afiliați</a></li>
-                            <li><a href="https://ultimatecomputers.ro/shop/index.php?route=product/special">Oferte speciale</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-sm-4 col-md-3 item-srv">
-                        <h3>INFORMATION</h3>
-                        <ul>
-                            <li><a href="contact.html">Contact</a></li>
-                            <li><a href="https://ultimatecomputers.ro/shop/index.php?route=information/information&amp;information_id=6" style="background: rgba(255,0,0,0);">Address</a></li>
-                            <li><a href="https://ultimatecomputers.ro/shop/index.php?route=information/information&amp;information_id=3" style="background: rgba(255,0,0,0);">Privacy Policiy</a></li>
-                            <li><a href="https://ultimatecomputers.ro/shop/index.php?route=information/information&amp;information_id=5" style="background: rgba(255,0,0,0);">Terms And Conditions</a></li>
-                        </ul>
-                    </div>
                     <div class="col-sm-4 col-md-3 item">
                         <h3>Reach Us</h3>
                         <ul>
-                            <li class="despre-noi"><i class="fa fa-home despre-noi"></i>&nbsp; Address</li>
-                            <li class="despre-noi"><i class="fa fa-envelope despre-noi"></i>&nbsp;Email:</li>
-                            <li class="despre-noi"><i class="fa fa-phone despre-noi"></i>&nbsp;Telephone:</li>
+                            <li class="despre-noi"><i class="fa fa-home despre-noi"></i>Address: </li>
+                            <li class="despre-noi"><i class="fa fa-envelope despre-noi"></i>Email: </li>
+                            <li class="despre-noi"><i class="fa fa-phone despre-noi"></i>Telephone: </li>
                         </ul>
                         <ul></ul>
                     </div>
